tests/NormalTests/paczka1/fuzzy1/20672701.err
Error in line 4: 7cJG12f S859 50,9
Error in line 6: 7cJG12f S485 2,4
Error in line 5: WWZCWsHH S485 74,3
Error in line 7: 7cJG12f S770 90,8
Error in line 1: RKs7j S399 29,0
Error in line 21: RKs7jS48596,9
Error in line 15: S399 S770 68,7
Error in line 18: RKs7j S485 36,3
